--- a/homework/Props and attrs/02-task.html
+++ b/homework/Props and attrs/02-task.html
@@ -1,29 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div data-value="10">
-        <p my-attribute="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eum neque minus et officia sequi, velit tempora consequatur mollitia ducimus consequuntur error amet reprehenderit id distinctio laborum est architecto repellat!</p>
-        <p data-value="1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ab. Voluptas temporibus quam quibusdam odio doloribus corrupti assumenda rem rerum, iusto natus animi accusamus dolore. Quas architecto libero cum modi.</p>
-        <p my-attribute="37">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus officiis natus itaque error saepe, alias harum porro nemo sint? Provident, optio. Aliquid fuga qui assumenda iusto, nihil id obcaecati est?</p>
-        <a my-attribute="7" href="https://itvdn.com">ITVDN</a>
-        <span data-value="9">Hello world</span>
+      <p my-attribute="4">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eum
+        neque minus et officia sequi, velit tempora consequatur mollitia ducimus
+        consequuntur error amet reprehenderit id distinctio laborum est
+        architecto repellat!
+      </p>
+      <p data-value="1">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ab.
+        Voluptas temporibus quam quibusdam odio doloribus corrupti assumenda rem
+        rerum, iusto natus animi accusamus dolore. Quas architecto libero cum
+        modi.
+      </p>
+      <p my-attribute="37">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+        officiis natus itaque error saepe, alias harum porro nemo sint?
+        Provident, optio. Aliquid fuga qui assumenda iusto, nihil id obcaecati
+        est?
+      </p>
+      <a my-attribute="7" href="https://itvdn.com">ITVDN</a>
+      <span data-value="9">Hello world</span>
     </div>
 
     <script>
-        /*
+      /*
         Задание:
         Посчитайте сумму значений атрибутов data-value и my-attribute всех элементов на текущей странице и отобразите ее пользователю.
         */
-    </script>
-</body>
+      let sum = 0;
+      let div = document.querySelector("div");
+      for (val of div.children) {
+        if (val.dataset.value) {
+          sum += Number(val.dataset.value);
+        }
 
+        if (val.hasAttribute("my-attribute")) {
+          sum += Number(val.getAttribute("my-attribute"));
+        }
+      }
+      console.log(sum + Number(div.dataset.value));
+    </script>
+  </body>
 </html>
