--- a/homework/Props and attrs/05-task.html
+++ b/homework/Props and attrs/05-task.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 05</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div data-bind="firstName"></div>
     <div data-bind="lastName"></div>
     <div data-bind="age"></div>
 
     <script>
-        /*
+      /*
         Задание:
-        Напишите сценарий, который свойства объекта user выведет в элементы на странице, которые помечены атрибутами data-bind.
-        При этом значение атрибута это имя свойства, значение которого должно отобразится в элементе.
-        Например, в <div data-bind="firstName"></div> должно отобразится значение свойства firstName объекта user
-        Попробуйте написать универсальную функцию, которая сможет выводить любой объект с любыми свойствами в разметку в соответствующие элементы, помеченные атрибутом.
+        Напишите сценарий, который свойства объекта user выведет в элементы на странице,
+        которые помечены атрибутами data-bind.
+        При этом значение атрибута это имя свойства, значение которого должно отобразится
+        в элементе.
+        Например, в <div data-bind="firstName"></div> должно отобразится значение свойства firstName
+        объекта user
+        Попробуйте написать универсальную функцию, которая сможет выводить любой объект с любыми
+        свойствами в разметку в соответствующие элементы, помеченные атрибутом.
         Для обхода свойств объекта, можно использовать цикл for in
         */
 
-        let user = {
-            firstName: "Jhon",
-            lastName: "Doe",
-            age: "25",
+      let user = {
+        firstName: "Jhon",
+        lastName: "Doe",
+        age: "25",
+      };
+
+      let objectToWork = (obj) => {
+        let divs = document.querySelectorAll("div");
+        for (div of divs) {
+          for (key in obj) {
+            if (key === div.dataset.bind) {
+              console.log(user[key]);
+              div.innerHTML = user[key];
+            }
+          }
         }
+      };
 
+      objectToWork(user);
     </script>
-</body>
-
+  </body>
 </html>
