--- a/homework/Context/05-task.html
+++ b/homework/Context/05-task.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 05</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
+      /*
         Задание:
-        Напишите сценарии "Игра 'Угадай число'". Суть игры - угадать за меньшее количество попыток число, которое загадал сценарий.
-        Каждый раз, когда игрок пытается угадать число, сценарий выводит подсказку - меньшее или большее число было загадано сценарием.
-        Сценарий загадывает число только один раз в начале игры и это число не меняется до завершения игры.
-        При завершении игры выведите пользователю информацию о том, с какой попытки угадано значение и сколько было потрачено на это времени.
+        Напишите сценарии "Игра 'Угадай число'". Суть игры - угадать за меньшее количество попыток
+        число, которое загадал сценарий.
+        Каждый раз, когда игрок пытается угадать число, сценарий выводит
+        подсказку - меньшее или большее число было загадано сценарием.
+        Сценарий загадывает число только один раз в начале игры и это число не меняется
+        до завершения игры.
+        При завершении игры выведите пользователю информацию о том, с какой попытки
+        угадано значение и сколько было потрачено на это времени.
 
         Для генерации случайного числа используйте следующий код:
-        let randomValue = Math.floor(Math.random() * 101); // случайное значение от 0 до 100 будет записано в переменную randomValue
-        
+        let randomValue = Math.floor(Math.random() * 101); // случайное значение
+        от 0 до 100 будет записано в переменную randomValue
+
         Пример игры:
         Сценарий: я загадал случайное значение от 0 до 100
         Пользователь: 50
@@ -31,7 +35,27 @@
         Пользователь: 56
         Сценарий: Правильно! Загаданное значение 56. Вы угадали с 4й попытки за 10 сек.
         */
-    </script>
-</body>
 
+      let randomValue = Math.floor(Math.random() * 101);
+
+      let guessValue = () => {
+        alert("Guess the number from 0 to 100");
+        console.log(randomValue);
+        while (true) {
+          let input = +prompt("Input the number between 0 and 100");
+          alert(randomValue);
+          if (input > randomValue) {
+            alert("Incorrect. Your number is higher");
+          } else if (input < randomValue) {
+            alert("Incorrect. Your number is lower");
+          } else {
+            alert("You won!");
+            break;
+          }
+        }
+      };
+
+      guessValue();
+    </script>
+  </body>
 </html>
