--- a/homework/Context/01-task.html
+++ b/homework/Context/01-task.html
@@ -1,92 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 01</title>
 
     <style>
-        #container {
-            position: relative;
-            border: 1px solid gray;
-            width: 265px;
-            height: 50px;
-            margin-top: 20px;
-        }
+      #container {
+        position: relative;
+        border: 1px solid gray;
+        width: 265px;
+        height: 50px;
+        margin-top: 20px;
+      }
 
-        #element {
-            width: 50px;
-            height: 50px;
-            background-color: green;
-            position: absolute;
-            left: 0;
-            top: 0;
-        }
+      #element {
+        width: 50px;
+        height: 50px;
+        background-color: green;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <button id="startBtn">Старт</button>
     <button id="stopBtn">Стоп</button>
     <button id="increaseBtn">Ускорить</button>
     <button id="decreaseBtn">Замедлить</button>
 
     <div id="container">
-        <div id="element"></div>
+      <div id="element"></div>
     </div>
 
     <script>
-        /*
+      /*
         Задание:
 
-        Доработайте сценарий. 
+        Доработайте сценарий.
         - При нажатии на кнопку стоп, анимация должна остановиться.
-        - При нажатии на кнопку ускорить, анимация должна ускориться, при повторных нажатиях скорость анимации
-          должна увеличиваться. 
-        - При нажатии на кнопку "Замедлить" - анимация замедляется, при повторных нажатиях скорость становится
-          меньше.
+        - При нажатии на кнопку ускорить, анимация должна ускориться,
+        при повторных нажатиях скорость анимации
+        должна увеличиваться.
+        - При нажатии на кнопку "Замедлить" - анимация замедляется,
+        при повторных нажатиях скорость становится
+        меньше.
         */
 
-        let element = document.querySelector("#element");
-        let elementWidth = parseInt(getComputedStyle(element).width);
-        let containerWidth = parseInt(getComputedStyle(document.querySelector("#container")).width);
+      let element = document.querySelector("#element");
+      let elementWidth = parseInt(getComputedStyle(element).width);
+      let containerWidth = parseInt(
+        getComputedStyle(document.querySelector("#container")).width
+      );
 
-        let direction = "right";
+      let direction = "right";
+      let speed = 3;
+      let interval;
 
-        function moveLeft() {
-            element.style.left = getLeft(element) - 3 + "px";
+      function moveLeft() {
+        element.style.left = getLeft(element) - speed + "px";
+      }
+
+      function moveRight() {
+        console.log(speed);
+
+        element.style.left = getLeft(element) + speed + "px";
+      }
+
+      function getLeft(e) {
+        return parseInt(getComputedStyle(e).left);
+      }
+
+      function move() {
+        console.log("here");
+        if (getLeft(element) >= containerWidth - elementWidth) {
+          direction = "left";
+        }
+        if (getLeft(element) <= 0) {
+          direction = "right";
         }
 
-        function moveRight() {
-            element.style.left = getLeft(element) + 3 + "px";
+        if (direction == "right") {
+          moveRight();
+        } else {
+          moveLeft();
         }
+      }
 
-        function getLeft(e) {
-            return parseInt(getComputedStyle(e).left);
+      document
+        .querySelector("#startBtn")
+        .addEventListener("click", function () {
+          if (!interval) interval = setInterval(move, 40);
+          console.log(interval);
+        });
+
+      document.querySelector("#stopBtn").addEventListener("click", function () {
+        if (interval) {
+          clearInterval(interval);
+          interval = null;
         }
+      });
 
-        function move() {
-            if (getLeft(element) >= containerWidth - elementWidth) {
-                direction = "left";
-            }
-            if (getLeft(element) <= 0) {
-                direction = "right";
-            }
+      document
+        .querySelector("#increaseBtn")
+        .addEventListener("click", function () {
+          speed++;
+        });
 
-            if (direction == "right") {
-                moveRight();
-            }
-            else {
-                moveLeft();
-            }
-        }
-
-        document.querySelector("#startBtn").addEventListener("click", function () {
-            setInterval(move, 40);
+      document
+        .querySelector("#decreaseBtn")
+        .addEventListener("click", function () {
+          speed--;
         });
     </script>
-</body>
-
+  </body>
 </html>
